--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="fontello.css">
 </head>
 <body>
 
@@ -17,7 +18,7 @@
             <label class="checkbox" for="toggle-air-quality">
                 <input type="checkbox" id="toggle-air-quality">
                 <span class="checkbox__checkmark"></span>
-                <span class="checkbox__body">Air Quality Sensors</span>
+                <span class="checkbox__body"><span class="icon-ventilation"></span> Air Quality Sensors</span>
                 <span id="air-quality" class="timestamp">-</span>
             </label>
         </li>
@@ -25,7 +26,7 @@
             <label class="checkbox" for="toggle-air-quality-time">
                 <input type="checkbox" id="toggle-air-quality-time">
                 <span class="checkbox__checkmark"></span>
-                <span class="checkbox__body">Air Quality Time Sensors</span>
+                <span class="checkbox__body"><span class="icon-ventilation"></span> Air Quality Time Sensors</span>
                 <span id="air-quality-time" class="timestamp">-</span>
             </label>
         </li>
@@ -33,7 +34,7 @@
             <label class="checkbox" for="toggle-traffic">
                 <input type="checkbox" id="toggle-traffic">
                 <span class="checkbox__checkmark"></span>
-                <span class="checkbox__body">Traffic Detectors</span>
+                <span class="checkbox__body"><span class="icon-car"></span> Traffic Detectors</span>
                 <span id="traffic-time" class="timestamp">-</span>
             </label>
         </li>
