--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,9 @@
     <div id="chart-container">
         <p id="no-chart-data" class="hidden">No data for chart.</p>
     </div>
-    <button id="btn-download-csv" class="action-btn">Download CSV</button>
+    <div class="actions">
+        <button id="btn-download-csv" class="action-btn">Download as CSV</button>
+    </div>
 </div>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
