--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
             <label class="checkbox" for="toggle-air-quality">
                 <input type="checkbox" id="toggle-air-quality">
                 <span class="checkbox__checkmark"></span>
-                <span class="checkbox__body"><span class="icon-ventilation"></span> Air Quality Sensors</span>
+                <span class="checkbox__body"><span class="icon-arrows-ccw"></span> Air Quality Sensors</span>
                 <span id="air-quality" class="timestamp">-</span>
             </label>
         </li>
@@ -26,7 +26,7 @@
             <label class="checkbox" for="toggle-air-quality-time">
                 <input type="checkbox" id="toggle-air-quality-time">
                 <span class="checkbox__checkmark"></span>
-                <span class="checkbox__body"><span class="icon-ventilation"></span> Air Quality Time Sensors</span>
+                <span class="checkbox__body"><span class="icon-arrows-ccw"></span> Air Quality Time Sensors</span>
                 <span id="air-quality-time" class="timestamp">-</span>
             </label>
         </li>
@@ -44,15 +44,17 @@
 <div id="map"></div>
 
 <div id="info-panel" class="off-screen">
-    <button id="close-panel">×</button>
-    <div id="info-content">
-        <p></p>
-    </div>
-    <div id="chart-container">
-        <p id="no-chart-data" class="hidden">No data for chart.</p>
-    </div>
-    <div class="actions">
-        <button id="btn-download-csv" class="action-btn">Download as CSV</button>
+    <div id="info-panel-container">
+        <button id="close-panel">×</button>
+        <div id="info-content">
+            <p></p>
+        </div>
+        <div id="chart-container">
+            <p id="no-chart-data" class="hidden">No data for chart.</p>
+        </div>
+        <div class="actions">
+            <button id="btn-download-csv" class="action-btn"><span class="icon-download"></span> Download as CSV</button>
+        </div>
     </div>
 </div>
 
